# youthPlayer

./: .gitignore  README.md  USER_MANUAL_ZH.md  architecture.md  config.py  main.py  models.py  package-lock.json  package.json  playback_system.db  playback_system.log.2026-04-06_12  prompt.md  pyproject.toml  requirements.txt  setup_env_windows.bat  start_windows.bat  vlc-help.txt
controller/: controller.py
player/: electron_runner.js  guard_notice.html  media_player.html  player.py  screensaver.html
security/: ldap_auth.py  watchdog.py
static/: app.js  styles.css
templates/: base.html  dashboard.html  index.html  login.html  monitor.html  schedules.html  settings.html  users.html
web/: routes.py
