[project]
name = "youthplayer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.9.1",
    "flask==2.0.1",
    "flask-login==0.5.0",
    "flask-sqlalchemy==2.5.1",
    "ldap3==2.9.1",
    "python-vlc==3.0.12118",
    "pywin32==307",
    "requests==2.26.0",
    "sqlalchemy==1.4.32",
    "werkzeug==2.0.1",
]
